adds ffmpeg to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -10,6 +10,7 @@ brew 'aria2'
 brew 'chruby'
 brew 'coreutils'
 brew 'drone'
+brew 'ffmpeg'
 brew 'fzf'
 brew 'getantibody/tap/antibody'
 brew 'heroku'
