Removes nvm, replaces with n

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -20,6 +20,7 @@ brew 'libressl'
 brew 'mas'
 brew 'maven'
 brew 'node'
+brew 'n'
 brew 'openssl'
 brew 'postgresql'
 brew 'puma/puma/puma-dev'
@@ -29,7 +30,6 @@ brew 'ruby-install'
 brew 'ruby'
 brew 'thefuck'
 brew 'tree'
-brew 'volta'
 brew 'watchman'
 brew 'wget'
 brew 'xhyve'
